--- a/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/ScoreWaitingScreen.fxml
+++ b/src/main/java/edu/unl/cse/csce361/boggle/frontend/FXML/ScoreWaitingScreen.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.EndScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unl.cse.csce361.boggle.frontend.ScreenController">
    <children>
       <Line endX="499.29290771484375" endY="7.62939453125E-6" layoutX="101.0" layoutY="56.0" startX="-100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Text layoutX="264.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boggle" textAlignment="CENTER">
@@ -13,7 +13,7 @@
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
-      <Text layoutX="225.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Commuting Scores" textAlignment="CENTER">
+      <Text layoutX="225.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Computing Scores" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
